<resources>
    <string name="app_name">My Application</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_home">My family</string>
    <string name="title_plan">My plan</string>
    <string name="title_cataog">Catalog</string>
    <string name="title_progress">Progress</string>
    <string name="title_Milestones">Progress</string>
    <string name="title_activity_main">Catalog</string>
</resources>
