<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_family"
        android:icon="@drawable/ic_1"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/ic_2"
        android:title="@string/title_plan" />

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/ic_3"
        android:title="@string/title_cataog" />
    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/ic_4"
        android:title="@string/title_progress" />

    <item
        android:id="@+id/navigation_milestones"
        android:icon="@drawable/ic_5"
        android:title="@string/title_Milestones" />

</menu>
